--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-Django>=4.2,<5.0
-gunicorn
-whitenoise
+asgiref==3.7.2
+Django==3.2.25
+gunicorn==23.0.0
+importlib-metadata==6.7.0
+packaging==24.0
+Pillow==9.5.0
+pytz==2025.2
+sqlparse==0.4.4
+typing-extensions==4.7.1
+whitenoise==6.5.0
+zipp==3.15.0
